update notebooks and readme

--- a/docs/howto/howto.ipynb
+++ b/docs/howto/howto.ipynb
@@ -90,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "{'RETURN_XARRAY': True, 'ADVANCED_SHAPE_REPR': True, 'NATURAL_NAMING': True, 'HDF_COMPRESSION': 'gzip', 'HDF_COMPRESSION_OPTS': 5, 'HTML_MAX_STRING_LENGTH': 40, 'MPL_STYLE': 'h5rdmtoolbox', 'XARRAY_UNIT_REPR_IN_PLOTS': '/', 'REQUIRE_UNITS': True, 'UREG_FORMAT': 'C~', 'STANDARD_NAME_TABLE_ATTRIBUTE_NAME': '__standard_name_table__', 'CONVENTION': 'default', 'INIT_LOGGER_LEVEL': 'DEBUG'}"
+       "{'RETURN_XARRAY': True, 'ADVANCED_SHAPE_REPR': True, 'NATURAL_NAMING': True, 'HDF_COMPRESSION': 'gzip', 'HDF_COMPRESSION_OPTS': 5, 'HTML_MAX_STRING_LENGTH': 40, 'MPL_STYLE': 'h5rdmtoolbox', 'XARRAY_UNIT_REPR_IN_PLOTS': '/', 'REQUIRE_UNITS': True, 'UREG_FORMAT': 'C~', 'STANDARD_NAME_TABLE_ATTRIBUTE_NAME': '__standard_name_table__', 'CONVENTION': 'cflike', 'INIT_LOGGER_LEVEL': 'DEBUG'}"
       ]
      },
      "execution_count": 3,
@@ -101,6 +101,25 @@
    "source": [
     "from h5rdmtoolbox.config import check_config, read_user_config\n",
     "check_config(remove_wrong=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<HDF5 dataset \"TEST\": shape (), type \"<i4\", convention \"default\">\n"
+     ]
+    }
+   ],
+   "source": [
+    "with h5tbx.H5File() as h5:\n",
+    "    h5.create_dataset('TEST', data=1)\n",
+    "    print(h5[h5tbx.lower('test')])"
    ]
   },
   {
