--- a/docs/wrapper/Visualization.ipynb
+++ b/docs/wrapper/Visualization.ipynb
@@ -102,7 +102,8 @@
    "source": [
     "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
     "    ds =  h5.build_xr_dataset(h5.u, h5.v, h5.w)\n",
-    "    ipv_quiver = ds[:, :, :].ipyvolume.quiver(x='x',y='y',z='z',u='u',v='u',w='u')\n",
+    "    ipv_quiver = ds[:, :, :].ipyvolume.quiver(x='x',y='y',z='z',\n",
+    "                                              u='u',v='u',w='u')\n",
     "    ipv_quiver.view(-10, -40, 2.5)\n",
     "    ipv_quiver.show()"
    ]
