housekeeping and minor fixes/updates

--- a/docs/howto/howto.ipynb
+++ b/docs/howto/howto.ipynb
@@ -16,6 +16,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### ... change the configuration of the package `h5rdmtoolbox`?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'RETURN_XARRAY': True, 'ADVANCED_SHAPE_REPR': True, 'NATURAL_NAMING': True, 'HDF_COMPRESSION': 'gzip', 'HDF_COMPRESSION_OPTS': 5, 'HTML_MAX_STRING_LENGTH': 40, 'XARRAY_UNIT_REPR_IN_PLOTS': '/', 'REQUIRE_UNITS': True, 'UREG_FORMAT': 'C~', 'STANDARD_NAME_TABLE_ATTRIBUTE_NAME': '__standard_name_table__', 'CONVENTION': 'default', 'INIT_LOGGER_LEVEL': 'DEBUG'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import h5rdmtoolbox as h5tbx\n",
+    "\n",
+    "# write the default config to file and make it available\n",
+    "h5tbx.config.write_default_config()\n",
+    "pprint(h5tbx.config.CONFIG)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'RETURN_XARRAY': True, 'ADVANCED_SHAPE_REPR': True, 'NATURAL_NAMING': True, 'HDF_COMPRESSION': 'gzip', 'HDF_COMPRESSION_OPTS': 5, 'HTML_MAX_STRING_LENGTH': 40, 'XARRAY_UNIT_REPR_IN_PLOTS': '/', 'REQUIRE_UNITS': True, 'UREG_FORMAT': 'C~', 'STANDARD_NAME_TABLE_ATTRIBUTE_NAME': '__standard_name_table__', 'CONVENTION': 'default', 'INIT_LOGGER_LEVEL': 'DEBUG'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# change one entry and save it to file (optional)\n",
+    "h5tbx.config.CONFIG.INIT_LOGGER_LEVEL = 'DEBUG'\n",
+    "h5tbx.config.write_user_config(h5tbx.config.CONFIG)\n",
+    "pprint(h5tbx.config.CONFIG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### ... get a `np.array` returned instead of a `xr.DataArray`?\n",
     "\n",
     "There are two ways: First, use the global config to control the general behaviour by calling `h5tbx.config.return_xarray=False`. Second option is to call `.values[:]` on the dataset:"
@@ -23,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,16 +134,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'RETURN_XARRAY': True, 'ADVANCED_SHAPE_REPR': True, 'NATURAL_NAMING': True, 'HDF_COMPRESSION': 'gzip', 'HDF_COMPRESSION_OPTS': 5, 'HTML_MAX_STRING_LENGTH': 40, 'MPL_STYLE': 'h5rdmtoolbox', 'XARRAY_UNIT_REPR_IN_PLOTS': '/', 'REQUIRE_UNITS': True, 'UREG_FORMAT': 'C~', 'STANDARD_NAME_TABLE_ATTRIBUTE_NAME': '__standard_name_table__', 'CONVENTION': 'cflike', 'INIT_LOGGER_LEVEL': 'DEBUG'}"
+       "{'RETURN_XARRAY': True, 'ADVANCED_SHAPE_REPR': True, 'NATURAL_NAMING': True, 'HDF_COMPRESSION': 'gzip', 'HDF_COMPRESSION_OPTS': 5, 'HTML_MAX_STRING_LENGTH': 40, 'XARRAY_UNIT_REPR_IN_PLOTS': '/', 'REQUIRE_UNITS': True, 'UREG_FORMAT': 'C~', 'STANDARD_NAME_TABLE_ATTRIBUTE_NAME': '__standard_name_table__', 'CONVENTION': 'default', 'INIT_LOGGER_LEVEL': 'INFO'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
