--- a/docs/wrapper/CreateFile.ipynb
+++ b/docs/wrapper/CreateFile.ipynb
@@ -12,10 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f0ec5083-bfc0-46b9-9627-299cbd842838",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-02-13_22:12:49,907 DEBUG    [__init__.py:33] changed logger level for h5rdmtoolbox from 20 to DEBUG\n",
+      "2023-02-13_22:12:49,910 INFO     [__init__.py:57] Switched to \"default\"\n"
+     ]
+    }
+   ],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
     "h5tbx.use('default')"
@@ -31,10 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3b363c60-21f7-408f-89b6-7fc9a77a6d3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r+\n",
+      "tmp0.hdf\n"
+     ]
+    }
+   ],
    "source": [
     "h5 = h5tbx.H5File()\n",
     "print(h5.mode)\n",
@@ -52,10 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "91fbac7b-de16-451b-a498-ef5af6f88529",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r\n"
+     ]
+    }
+   ],
    "source": [
     "h5 = h5tbx.H5File(h5.hdf_filename)\n",
     "print(h5.mode)\n",
@@ -74,12 +100,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "34b7e026-3f38-494c-bd86-17c786c3ecbb",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test.hdf\n"
+     ]
+    }
+   ],
    "source": [
     "with h5tbx.H5File('test.hdf', 'w') as h5:\n",
     "    print(h5.hdf_filename.name)"
@@ -103,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "58c032e2-f964-4d2b-bdfd-6666a66948a8",
    "metadata": {},
    "outputs": [],
@@ -136,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
