bugfix dataset slicing and update notebooks

--- a/docs/wrapper/CreateFile.ipynb
+++ b/docs/wrapper/CreateFile.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Create an HDF file\n",
     "\n",
-    "To work with HDF5 files, the \"wrapper\"-class `H5File` is used (quivilant to `h5py.File`)."
+    "To work with HDF5 files, the \"wrapper\"-class `H5File` is used (aquivilant to `h5py.File`)."
    ]
   },
   {
@@ -15,16 +15,7 @@
    "execution_count": 1,
    "id": "f0ec5083-bfc0-46b9-9627-299cbd842838",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-02-13_22:12:49,907 DEBUG    [__init__.py:33] changed logger level for h5rdmtoolbox from 20 to DEBUG\n",
-      "2023-02-13_22:12:49,910 INFO     [__init__.py:57] Switched to \"default\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
     "h5tbx.use('default')"
@@ -35,7 +26,7 @@
    "id": "0e73ec28-d197-4086-ba25-766c188befbf",
    "metadata": {},
    "source": [
-    "Creating a file does not require filename. If not specified, a temporary file is created. In this case the file-`mode` is `r+`, otherwise and if not specified, the defualt opening mode is `r` (read-only):"
+    "Creating a file does not require filename. If not specified, a **temporary file is created**. In this case the file-`mode` is `r+`, otherwise and if not specified, the defualt opening mode is `r` (read-only):"
    ]
   },
   {
@@ -78,14 +69,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r\n"
+      "Not a file or file object (not a file or file object)\n",
+      "tmp0.hdf\n"
      ]
     }
    ],
    "source": [
     "h5 = h5tbx.H5File(h5.hdf_filename)\n",
-    "print(h5.mode)\n",
-    "h5.close()"
+    "h5.close()\n",
+    "try:\n",
+    "    print(h5.filename)\n",
+    "except ValueError as e:\n",
+    "    print(e)\n",
+    "print(h5.hdf_filename.name)"
    ]
   },
   {
@@ -132,7 +128,7 @@
    "id": "d0d7a409-9a18-4ec6-8406-8a63f68b0cac",
    "metadata": {},
    "source": [
-    "As stated above, the `hdf_filename` is a `pathlib.Path` object. Deleting the file is hence very simple:"
+    "As stated above, the `hdf_filename` is a `pathlib.Path` object, which gives much more possibilities to work with the file, among many, deleting the file is very simple:"
    ]
   },
   {
@@ -148,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f13c36b-1d6d-4ee5-a2c1-3fa19c242626",
+   "id": "e3e225db-affd-49f9-a1f7-3d9e420cb528",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -170,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
