--- a/docs/wrapper/Extensions.ipynb
+++ b/docs/wrapper/Extensions.ipynb
@@ -23,15 +23,7 @@
    "execution_count": 1,
    "id": "a1cbc998-a747-4370-b362-d04c4d6508be",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-12-29_17:22:46,71 INFO     [__init__.py:52] Switched to \"default\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
     "h5tbx.use('default')"
@@ -47,7 +39,7 @@
     "from typing import Tuple\n",
     "\n",
     "# register a property with setter and getter method:\n",
-    "@h5tbx.conventions.register_hdf_attr(h5tbx.wrapper.cflike.H5Dataset, overwrite=True, name='username')\n",
+    "@h5tbx.conventions.register_hdf_attr(h5tbx.wrapper.core.H5Dataset, overwrite=True, name='username')\n",
     "class username:\n",
     "    \"\"\"User Name Property. Requires name and ORCID\"\"\"\n",
     "\n",
@@ -89,7 +81,8 @@
      "output_type": "stream",
      "text": [
       "('First User', '0000-0001-8729-0482')\n",
-      "Second User\n"
+      "Could not add user due to: Expecting a tuple of name and orcid but got <class 'str'>\n",
+      "('First User', '0000-0001-8729-0482')\n"
      ]
     },
     {
@@ -298,25 +291,21 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4461707200\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4461707200\">\n",
+       "                        <input id=\"group-ds--4657535100\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4657535100\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a1</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a3</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/test-4463819100\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/test-4463822400\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                <label class='h5tb-varname' \n",
-       "                    for=\"ds-2-/test-4463822400\">test</label>\n",
-       "                <span class=\"h5tb-dims\">(2,) (float32)</span>\n",
-       "<ul class=\"h5tb-attr-list\">\n",
-       "\n",
-       "                    </ul>\n",
-       "\n",
-       "                 </ul>\n",
-       "                 \n",
+       "                <ul id=\"ds-1-/test-4658977900\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/test-4658980500\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/test-4658980500\">test</label>\n",
+       "                    <span class=\"h5tb-dims\">(2) [float32]</span>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">user_name : First User</li><li style=\"list-style-type: none; font-style: italic\">user_orcid : 0000-0001-8729-0482</li>\n",
+       "                </ul>\n",
+       "                </ul>\n",
        "</li>\n",
        "</ul>\n",
        "</div>"
@@ -451,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "ae1b660a-c370-4e29-9467-64d1272a3daa",
    "metadata": {},
    "outputs": [],
@@ -465,8 +454,10 @@
     "        return [k for k in self if isinstance(self[k], h5py.Dataset)]\n",
     "    \n",
     "    def create_group(self, name, *args, **kwargs):\n",
+    "        \"\"\"overrite create_group method\"\"\"\n",
+    "        g = super().create_group(name, *args, **kwargs)\n",
     "        print(f'creating a group named {g.name}')\n",
-    "        return __class__(super().create_group(name, *args, **kwargs).id)\n",
+    "        return MyGroup(g.id)\n",
     "    \n",
     "    def create_dataset(self, name, user, *args, **kwargs):\n",
     "        ds = super().create_dataset(name, *args, **kwargs)\n",
@@ -485,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "21bcc1fe-1fbc-49f8-942f-14b7b87f08bf",
    "metadata": {},
    "outputs": [],
@@ -506,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "bb4c50eb-4cf7-4a26-8b88-0c2185c681fb",
    "metadata": {},
    "outputs": [],
@@ -520,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "bc3a2495-9167-4d4d-8c45-6280a5951b36",
    "metadata": {},
    "outputs": [],
@@ -530,28 +521,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "b3b00f9f-5801-4c3e-b92a-db12d883b8cf",
+   "execution_count": 12,
+   "id": "8568efa3-20c5-46ee-9b76-9adc35801fba",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating a group named /dwa\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<head><style>/*\r\n",
+       "CSS inspired by xarray: https://github.com/pydata/xarray\r\n",
+       "*/\r\n",
+       ".h5tb-header > div,\r\n",
+       ".h5tb-header > ul {\r\n",
+       "    display: inline;\r\n",
+       "    margin-top: 0;\r\n",
+       "    margin-bottom: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataarray-cls,\r\n",
+       ".h5tb-dataarray-name {\r\n",
+       "    margin-left: 2px;\r\n",
+       "    margin-right: 10px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataarray-name {\r\n",
+       "    color: #000;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections {\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 3px;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections label {\r\n",
+       "    display: inline;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label > span {\r\n",
+       "    display: inline;\r\n",
+       "    margin-left: 4px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:checked + label > span {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:enabled + label {\r\n",
+       "    cursor: pointer;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:not(.h5tb-values-in) ~ ul {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:not(.h5tb-values-in):checked ~ ul {\r\n",
+       "    display: block;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label {\r\n",
+       "    width: 140px;\r\n",
+       "    color: #555;\r\n",
+       "    font-weight: 500;\r\n",
+       "    padding: 4px 0 2px 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label:before {\r\n",
+       "    display: inline-block;\r\n",
+       "    content: '+';\r\n",
+       "    font-size: 11px;\r\n",
+       "    width: 15px;\r\n",
+       "    text-align: center;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:disabled + label:before {\r\n",
+       "    color: #777;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:checked + label:before {\r\n",
+       "    content: '-';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list {\r\n",
+       "    display: inline-block !important;\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list li {\r\n",
+       "    display: inline-block;\r\n",
+       "    padding: 0;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list:before {\r\n",
+       "    content: '(';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list:after {\r\n",
+       "    content: ')';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list li:not(:last-child):after {\r\n",
+       "    content: ',';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-has-index {\r\n",
+       "    text-decoration: underline;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list {\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 0;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list > li {\r\n",
+       "    background-color: #fcfcfc;\r\n",
+       "    overflow: hidden;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list > li:nth-child(odd) {\r\n",
+       "    background-color: #efefef;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list li:hover {\r\n",
+       "    background-color: rgba(3, 169, 244, .2);\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list li > span {\r\n",
+       "    display: inline-block;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in + label {\r\n",
+       "    width: 140px;\r\n",
+       "    padding-left: 0;\r\n",
+       "    font-weight: bold;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataset {\r\n",
+       "    width: 100px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attributevalue {\r\n",
+       "    width: 100px;\r\n",
+       "    text-align: left;\r\n",
+       "    color: #888;\r\n",
+       "    white-space: nowrap;\r\n",
+       "    font-size: 12px;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in + label:before {\r\n",
+       "    content: ' ';\r\n",
+       "    display: inline-block;\r\n",
+       "    font-size: 11px;\r\n",
+       "    width: 15px;\r\n",
+       "    padding-left: 2px;\r\n",
+       "    padding-right: 2px;\r\n",
+       "    text-align: center;\r\n",
+       "    color: #aaa;\r\n",
+       "    text-decoration: none !important;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in:enabled + label:hover:before {\r\n",
+       "    color: #000;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in:checked + label:before {\r\n",
+       "    color: #ccc;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dims {\r\n",
+       "    width: 280px;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       ".h5tb-unit {\r\n",
+       "    width: 96px;\r\n",
+       "    white-space: nowrap;\r\n",
+       "    padding-right: 2px;\r\n",
+       "    text-align: right;\r\n",
+       "    color: #555;\r\n",
+       "    font-style: italic;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attr-list {\r\n",
+       "    list-style: none;\r\n",
+       "    background-color: #fff;\r\n",
+       "    padding-bottom: 6px;\r\n",
+       "    color: #555;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attr-list li,\r\n",
+       ".h5tb-attr-list li:hover {\r\n",
+       "    background-color: #fff;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-highlight {\r\n",
+       "    background-color: rgba(3, 169, 244, .2);\r\n",
+       "    cursor: pointer;\r\n",
+       "}</style></head>\n",
+       "<div class='h5tb-warp'>\n",
+       "\n",
+       "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "                    <li>\n",
+       "                        <input id=\"group-ds-dwa-4824640700\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-dwa-4824640700\">\n",
+       "                        dwa<span>(0)</span></label>\n",
+       "                  \n",
+       "\n",
+       "                    <ul class=\"h5tb-attr-list\">\n",
+       "                    </ul>\n",
+       "</li>\n",
+       "</ul>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "__main__.MyWrapper"
+       "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 32,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<HDF5 wrapper group \"/dwa\" (members: 0, convention: \"default\")>"
+      ]
+     },
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(h5)"
+    "h5.create_group('dwa')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "7d729bbe-89eb-46af-8cee-d46e700356a5",
    "metadata": {},
    "outputs": [
@@ -560,7 +782,7 @@
      "output_type": "stream",
      "text": [
       "creating a group named /grp\n",
-      "creating a group named /grp\n"
+      "creating a group named /grp/grp\n"
      ]
     }
    ],
@@ -571,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "ff52f8fe-f255-4fcb-a5cf-af54f97597e1",
    "metadata": {},
    "outputs": [
@@ -589,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "id": "e14dedfa-bbf8-44e1-891e-e0455da3c70c",
    "metadata": {},
    "outputs": [],
@@ -599,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "2df29018-f4d3-477b-bed3-a470514a0bac",
    "metadata": {},
    "outputs": [
@@ -809,18 +1031,30 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--276721695600\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--276721695600\">\n",
-       "                        /<span>(1)</span></label>\n",
+       "                        <input id=\"group-ds--4888572300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4888572300\">\n",
+       "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a1</li><li style=\"list-style-type: none; font-style: italic\">user : new_user</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a3</li><li style=\"list-style-type: none; font-style: italic\">user : new_user</li>\n",
        "                    </ul>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-grp-276722396200\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-grp-276722396200\">\n",
+       "                        <input id=\"group-ds-dwa-4889283900\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-dwa-4889283900\">\n",
+       "                        dwa<span>(0)</span></label>\n",
+       "                  \n",
+       "\n",
+       "                    <ul class=\"h5tb-attr-list\">\n",
+       "                    </ul>\n",
+       "</li>\n",
+       "</ul>\n",
+       "\n",
+       "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "                    <li>\n",
+       "                        <input id=\"group-ds-grp-4889398200\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-grp-4889398200\">\n",
        "                        grp<span>(1)</span></label>\n",
        "                  \n",
        "\n",
@@ -829,13 +1063,21 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-grp-276722646100\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-grp-276722646100\">\n",
-       "                        grp<span>(0)</span></label>\n",
+       "                        <input id=\"group-ds-grp-4889619700\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-grp-4889619700\">\n",
+       "                        grp<span>(1)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
+       "\n",
+       "                <ul id=\"ds-1-/grp/grp/hello-4890758400\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/grp/grp/hello-4890761200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/grp/grp/hello-4890761200\">hello</label>\n",
+       "                    <span class=\"h5tb-dims\">(2, 3) [float32]</span>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">user : Max</li>\n",
+       "                </ul>\n",
+       "                </ul>\n",
        "</li>\n",
        "</ul>\n",
        "</li>\n",
@@ -854,10 +1096,10 @@
     {
      "data": {
       "text/plain": [
-       "<HDF5 (convention: default) file \"tmp8.hdf\" (mode r+)>"
+       "<HDF5 (convention: default) file \"tmp4.hdf\" (mode r+)>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +1125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
