minor fixes and update notebooks
also updated version string

--- a/docs/database/Serverless.ipynb
+++ b/docs/database/Serverless.ipynb
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-12-29_16:41:07,289 INFO     [__init__.py:61] Switched to \"cflike\"\n"
+      "2023-03-01_14:10:42,685 INFO     [__init__.py:72] Switched to \"cflike\"\n"
      ]
     }
    ],
@@ -30,7 +30,7 @@
     "from h5rdmtoolbox import database as h5db\n",
     "from h5rdmtoolbox import tutorial\n",
     "import h5rdmtoolbox as h5tbx\n",
-    "from h5rdmtoolbox.config import set_config_parameter\n",
+    "from h5rdmtoolbox import config\n",
     "\n",
     "h5tbx.use('cflike')\n",
     "\n",
@@ -257,49 +257,41 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4396862400\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4396862400\">\n",
+       "                        <input id=\"group-ds--5058974800\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5058974800\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a1</li><li style=\"list-style-type: none; font-style: italic\">project : tutorial</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a3</li><li style=\"list-style-type: none; font-style: italic\">project : tutorial</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/velocity-4398955800\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/velocity-4398964700\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                <label class='h5tb-varname' \n",
-       "                    for=\"ds-2-/velocity-4398964700\">velocity</label>\n",
-       "                <span class=\"h5tb-dims\">(3,) (int32)</span> [m/s]\n",
-       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
+       "                <ul id=\"ds-1-/velocity-5060568400\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/velocity-5060571000\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/velocity-5060571000\">velocity</label>\n",
+       "                    <span class=\"h5tb-dims\">(3) [int32]</span> [m/s]\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
        "             italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
-       "\n",
-       "                    </ul>\n",
-       "\n",
-       "                 </ul>\n",
-       "                 \n",
+       "                </ul>\n",
+       "                </ul>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-sub-4399817500\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-sub-4399817500\">\n",
+       "                        <input id=\"group-ds-sub-5060779400\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-sub-5060779400\">\n",
        "                        sub<span>(1)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/sub/velocity-4400402700\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/sub/velocity-4400405400\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                <label class='h5tb-varname' \n",
-       "                    for=\"ds-2-/sub/velocity-4400405400\">velocity</label>\n",
-       "                <span class=\"h5tb-dims\">(5,) (int32)</span> [m/s]\n",
-       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
+       "                <ul id=\"ds-1-/sub/velocity-5061150700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/sub/velocity-5061153200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/sub/velocity-5061153200\">velocity</label>\n",
+       "                    <span class=\"h5tb-dims\">(5) [int32]</span> [m/s]\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
        "             italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
-       "\n",
-       "                    </ul>\n",
-       "\n",
-       "                 </ul>\n",
-       "                 \n",
+       "                </ul>\n",
+       "                </ul>\n",
        "</li>\n",
        "</ul>\n",
        "</li>\n",
@@ -388,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "4c8a143b-6424-408b-8ad1-8569e0620f4b",
    "metadata": {},
    "outputs": [
@@ -487,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
