--- a/docs/conventions/layouts.ipynb
+++ b/docs/conventions/layouts.ipynb
@@ -30,10 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "@ C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\layouts:\n",
-      " > H5File\n",
-      " > H5Flow\n",
-      " > H5PIV\n"
+      " > H5File\n"
      ]
     }
    ],
@@ -349,21 +346,31 @@
        "}</style></head>\n",
        "<p>H5FileLayout File \"tmp1\"</p>\n",
        "\n",
+       "\n",
        "<div class='h5tb-warp'>\n",
        "\n",
-       "          <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
-       "                <li>\n",
-       "                    <input id=\"group-ds-/-6450441600\" type=\"checkbox\" checked>\n",
-       "                    <label style=\"font-weight: bold\" for=\"group-ds-/-6450441600\">\n",
-       "                    /<span>(0)</span></label>\n",
-       "              \n",
+       "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "                    <li>\n",
+       "                        <input id=\"group-ds--7353564600\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--7353564600\">\n",
+       "                        /<span>(0)</span></label>\n",
+       "                  \n",
        "\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : __version of this package</li><li style=\"list-style-type: none; font-style: italic\">title : __file title</li>\n",
-       "                </ul>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : __version of this package</li><li style=\"list-style-type: none; font-style: italic\">title : __file title</li>\n",
+       "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
        "</div>"
       ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/plain": [
        "<H5FileLayout with 0 issues>"
       ]
@@ -396,10 +403,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-21_17:39:24,538 ERROR    [layout.py:94] Attribute title missing in group /\n",
-      "2022-10-21_17:39:24,538 ERROR    [layout.py:94] Attribute title missing in group /\n",
-      "2022-10-21_17:39:24,538 ERROR    [layout.py:94] Attribute title missing in group /\n",
-      "2022-10-21_17:39:24,538 ERROR    [layout.py:94] Attribute title missing in group /\n"
+      "2023-03-01_14:18:56,791 ERROR    [layout.py:95] Attribute title missing in group /\n",
+      "2023-03-01_14:18:56,791 ERROR    [layout.py:95] Attribute title missing in group /\n",
+      "2023-03-01_14:18:56,795 ERROR    [layout.py:95] Attribute title missing in group /\n",
+      "2023-03-01_14:18:56,795 ERROR    [layout.py:95] Attribute title missing in group /\n"
      ]
     },
     {
@@ -452,15 +459,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Checking C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp155\\tmp2 with layout H5File\n"
+      "Checking C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp1200\\tmp2 with layout H5File\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-21_17:39:26,412 ERROR    [layout.py:94] Attribute title missing in group /\n",
-      "2022-10-21_17:39:26,412 ERROR    [layout.py:94] Attribute title missing in group /\n"
+      "2023-03-01_14:18:59,351 ERROR    [layout.py:95] Attribute title missing in group /\n",
+      "2023-03-01_14:18:59,351 ERROR    [layout.py:95] Attribute title missing in group /\n"
      ]
     }
    ],
@@ -710,21 +717,31 @@
        "}</style></head>\n",
        "<p>H5FileLayout File \"tmp6\"</p>\n",
        "\n",
+       "\n",
        "<div class='h5tb-warp'>\n",
        "\n",
-       "          <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
-       "                <li>\n",
-       "                    <input id=\"group-ds-/-8647271800\" type=\"checkbox\" checked>\n",
-       "                    <label style=\"font-weight: bold\" for=\"group-ds-/-8647271800\">\n",
-       "                    /<span>(0)</span></label>\n",
-       "              \n",
+       "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "                    <li>\n",
+       "                        <input id=\"group-ds--10216675800\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--10216675800\">\n",
+       "                        /<span>(0)</span></label>\n",
+       "                  \n",
        "\n",
-       "                <ul class=\"h5tb-attr-list\">\n",
-       "                </ul>\n",
+       "                    <ul class=\"h5tb-attr-list\">\n",
+       "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
        "</div>"
       ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/plain": [
        "<H5FileLayout with 0 issues>"
       ]
@@ -765,8 +782,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-21_17:39:26,730 ERROR    [layout.py:94] Attribute type missing in group /\n",
-      "2022-10-21_17:39:26,730 ERROR    [layout.py:94] Attribute type missing in group /\n"
+      "2023-03-01_14:18:59,633 ERROR    [layout.py:95] Attribute type missing in group /\n",
+      "2023-03-01_14:18:59,633 ERROR    [layout.py:95] Attribute type missing in group /\n"
      ]
     },
     {
@@ -864,14 +881,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-21_17:39:26,767 ERROR    [layout.py:31] Wrong shape of dataset /data: (20, 30) != (20, 32)\n",
-      "2022-10-21_17:39:26,767 ERROR    [layout.py:31] Wrong shape of dataset /data: (20, 30) != (20, 32)\n",
-      "2022-10-21_17:39:26,770 ERROR    [layout.py:77] Neither of the attribute standard_name, long_name exist in /data\n",
-      "2022-10-21_17:39:26,770 ERROR    [layout.py:77] Neither of the attribute standard_name, long_name exist in /data\n",
-      "2022-10-21_17:39:26,770 ERROR    [layout.py:68] Base-units check failed for /data: kg != m\n",
-      "2022-10-21_17:39:26,770 ERROR    [layout.py:68] Base-units check failed for /data: kg != m\n",
-      "2022-10-21_17:39:26,774 ERROR    [layout.py:71] Attribute units missing in /x\n",
-      "2022-10-21_17:39:26,774 ERROR    [layout.py:71] Attribute units missing in /x\n"
+      "2023-03-01_14:18:59,679 ERROR    [layout.py:32] Wrong shape of dataset /data: (20, 30) != (20, 32)\n",
+      "2023-03-01_14:18:59,679 ERROR    [layout.py:32] Wrong shape of dataset /data: (20, 30) != (20, 32)\n",
+      "2023-03-01_14:18:59,681 ERROR    [layout.py:78] Neither of the attribute standard_name, long_name exist in /data\n",
+      "2023-03-01_14:18:59,681 ERROR    [layout.py:78] Neither of the attribute standard_name, long_name exist in /data\n",
+      "2023-03-01_14:18:59,683 ERROR    [layout.py:69] Base-units check failed for /data: kg != m\n",
+      "2023-03-01_14:18:59,683 ERROR    [layout.py:69] Base-units check failed for /data: kg != m\n",
+      "2023-03-01_14:18:59,685 ERROR    [layout.py:72] Attribute units missing in /x\n",
+      "2023-03-01_14:18:59,685 ERROR    [layout.py:72] Attribute units missing in /x\n"
      ]
     },
     {
@@ -927,7 +944,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
