--- a/docs/conventions/conventions.ipynb
+++ b/docs/conventions/conventions.ipynb
@@ -24,7 +24,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-01_14:19:11,807 INFO     [__init__.py:72] Switched to \"cflike\"\n"
+      "2023-03-01_14:28:15,381 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n",
+      "2023-03-01_14:28:15,515 INFO     [__init__.py:72] Switched to \"cflike\"\n"
      ]
     }
    ],
@@ -271,6 +272,7 @@
      "text": [
       " > fluid-v1\n",
       " > piv-v1\n",
+      " > standard_name_table-v79\n",
       " > Test-v1\n",
       " > Test_SNC-v1\n"
      ]
@@ -301,8 +303,16 @@
      "text": [
       " > fluid-v1\n",
       " > piv-v1\n",
+      " > standard_name_table-v79\n",
       " > Test-v1\n",
       " > Test_SNC-v1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-01_14:28:25,537 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
      ]
     }
    ],
@@ -714,8 +724,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-01_14:19:15,427 ERROR    [standard_name.py:666]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
-      "2023-03-01_14:19:15,427 ERROR    [standard_name.py:666]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
+      "2023-03-01_14:28:33,859 ERROR    [standard_name.py:666]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
+      "2023-03-01_14:28:33,859 ERROR    [standard_name.py:666]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
      ]
     }
    ],
@@ -751,15 +761,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " > Checking file \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp1210\\tmp2.hdf\" with standard name table \"standard_name_table-v79\"\n"
+      " > Checking file \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp1227\\tmp2.hdf\" with standard name table \"standard_name_table-v79\"\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-01_14:19:30,384 ERROR    [standard_name.py:666]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
-      "2023-03-01_14:19:30,384 ERROR    [standard_name.py:666]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
+      "2023-03-01_14:28:41,7 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n",
+      "2023-03-01_14:28:49,130 ERROR    [standard_name.py:666]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
+      "2023-03-01_14:28:49,130 ERROR    [standard_name.py:666]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
      ]
     }
    ],
